# downloader-cli

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md
src/: color.rs  download.rs  main.rs
